[package]
name = "knockknock"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3.1"
teloxide-macros = "0.3.2"

log = "0.4.11"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.22", features = ["rt-threaded", "macros"] }

toml = "0.5"
serde = "1.0.115"

# warp = "0.2.5"
serde_json = "1.0.57"

actix-web = "3"
ring = "0.16.15"

once_cell = "1.4.1"
hex = "0.4.2"
hostname = "0.3.1"